--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  flutter_native_splash: ^2.2.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -19,4 +20,8 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/app_icon_unicorn.png"
+flutter_native_splash:
+  color: "#ffffff"
+  image: "assets/splash_unicorn.png"
+  fullscreen: true
 
