--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.4
+  shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -16,6 +17,8 @@ dev_dependencies:
   flutter_launcher_icons: "^0.9.2"
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
 flutter_icons:
   android: "launcher_icon"
   ios: true
