--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^2.2.4
   shared_preferences: ^2.0.15
+  scroll_to_index: ^3.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
